--- a/4_term/KPP/lab/src/main/resources/templates/front.html
+++ b/4_term/KPP/lab/src/main/resources/templates/front.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en">
+
 <head>
     <title>Random numbers</title>
 </head>
@@ -11,11 +12,10 @@
     <label for="num">Enter number: </label><br>
     <input type = "number" id = "num" name = "num" value="50"><br>
 
-
-    <label for="md">Enter mode (0 - more, 1 - less) : </label><br>
-    <input type = "number" id = "md" name = "md" value="1"><br>
-
-    <input type="submit" value="Random">
+    <button id="random_more" name="md" type="submit" value="0">Random less</button>
+    <button id="random_less" name="md" type="submit" value="1">Random more</button>
 
 </form>
+
+
 </html>
