--- a/4_term/KPP/lab/src/main/resources/templates/front.html
+++ b/4_term/KPP/lab/src/main/resources/templates/front.html
@@ -8,9 +8,10 @@
 
 <form style="text-align: center" th:action="@{/random}" method="get">
 
-
-    <label for="num">Enter number: </label><br>
-    <input type = "number" id = "num" name = "num" value="50"><br>
+    <label for="num">Enter number: </label>
+    <br>
+    <input type = "number" id = "num" name = "num" value="50">
+    <br>
     <br>
     <button id="random_more" name="md" type="submit" value="0">Random less</button>
     <button id="random_less" name="md" type="submit" value="1">Random more</button>
